fixed spacing in skills section

--- a/Resources/styles.css
+++ b/Resources/styles.css
@@ -1082,6 +1082,10 @@ footer ul a:hover {
         display: none;
     }
 
+    .mySkills h3 {
+        margin-top: 4%;
+    }
+
     .figmaDesignsContainer {
         grid-template-columns: repeat(1, 1fr);
     }
